<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:padding="5dip"
	android:background="@drawable/gradient_black"
>

	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:text="@string/period"
		android:textSize="12dip"
		android:padding="2dip"
		android:textStyle="normal"
		android:typeface="normal"
		android:textColor="#e4e4e4" />
	<TextView
		android:id="@+id/periodVal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/title"
		android:layout_toRightOf="@+id/title"
		android:text="@string/onesecond"
		android:layout_marginLeft="15dip"
		android:textSize="11dip"
		android:padding="2dip"
		android:textStyle="normal"
		android:typeface="normal"
		android:textColor="#e4e4e4" />
	<TextView
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignBottom="@+id/title"
		android:layout_width="wrap_content"
		android:text="1.000 Hz"
		android:id="@+id/frequency"
		android:textSize="11dip"
		android:padding="2dip"
		android:textStyle="normal"
		android:typeface="normal"
		android:textColor="#e4e4e4" />
	<TextView
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_toLeftOf="@+id/frequency"
		android:layout_width="wrap_content"
		android:layout_marginRight="15dip"
		android:text="@string/frequency"
		android:id="@+id/freqlabel"
		android:textSize="12dip"
		android:padding="2dip"
		android:textStyle="normal"
		android:typeface="normal"
		android:textColor="#e4e4e4" />
	<ImageView
		android:id="@+id/subtractButton"
		android:scaleType="fitCenter"
		android:contentDescription="Fewer"
		android:layout_height="40dip"
		android:layout_width="40dip"
		android:padding="1dip"
		android:layout_margin="2dip"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/title"
		android:src="@android:drawable/ic_media_previous" />
	<ImageView
		android:id="@+id/addButton"
		android:scaleType="fitCenter"
		android:contentDescription="More"
		android:layout_height="40dip"
		android:layout_width="40dip"
		android:padding="1dip"
		android:layout_margin="2dip"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/title"
		android:src="@android:drawable/ic_media_next" />
	<SeekBar
		android:id="@+id/freqbar"
		android:layout_below="@+id/title"
		android:layout_toRightOf="@+id/subtractButton"
		android:layout_toLeftOf="@+id/addButton"
		android:layout_alignTop="@+id/subtractButton"
		android:layout_alignBottom="@+id/subtractButton"
		android:max="200"
		android:progress="100"
		android:progressDrawable="@drawable/progress"
		android:thumb="@drawable/thumb_drawable"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:paddingBottom="9dip"
		android:paddingTop="9dip"
		android:maxHeight="40dip"
		android:minHeight="12dip"
		android:thumbOffset="0dip"
		android:layout_marginTop="0dip" />
	<!-- android:progressDrawable="@drawable/gradient_green" -->
	<!-- style="@style/Widget.SeekBar" -->
	<TextView
		android:layout_below="@+id/freqbar"
		android:layout_height="wrap_content"
		android:text="@string/hundredsec"
		android:layout_width="wrap_content"
		android:id="@+id/label100"
		android:layout_alignRight="@+id/freqbar"
		android:textSize="6dip"
		android:padding="0dip"
		android:textStyle="normal"
		android:typeface="normal"
		android:textColor="#e4e4e4" />
	<TextView
		android:layout_below="@+id/freqbar"
		android:layout_height="wrap_content"
		android:text="@string/onesecond"
		android:layout_width="wrap_content"
		android:id="@+id/label1"
		android:layout_alignLeft="@+id/freqbar"
		android:layout_alignRight="@+id/freqbar"
		android:gravity="center"
		android:textSize="6dip"
		android:padding="0dip"
		android:textStyle="normal"
		android:typeface="normal"
		android:textColor="#e4e4e4" />
	<TextView
		android:layout_below="@+id/freqbar"
		android:layout_height="wrap_content"
		android:text="@string/tenmillis"
		android:layout_width="wrap_content"
		android:id="@+id/label01"
		android:layout_alignLeft="@+id/freqbar"
		android:textSize="6dip"
		android:padding="0dip"
		android:textStyle="normal"
		android:typeface="normal"
		android:textColor="#e4e4e4" />
	<!-- android:layout_alignBottom="@+id/toggleMetric" -->

	<TextView
		android:id="@+id/durationlabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/label01"
		android:layout_marginTop="20dip"
		android:layout_marginRight="20dip"
		android:text="@string/duration"
		android:textSize="12dip"
		android:padding="2dip"
		android:textStyle="normal"
		android:typeface="normal"
		android:textColor="#e4e4e4" />
	<LinearLayout
		android:id="@+id/duration"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/durationlabel"
		android:layout_below="@+id/durationlabel"
		android:padding="2dip"
		android:weightSum="1.0"
	>
		<ToggleButton
			android:layout_height="50dip"
			android:layout_width="wrap_content"
			android:id="@+id/toggleMetric"
			android:textStyle="bold"
			android:typeface="normal"
			android:textSize="12dip"
			android:gravity="top|center_horizontal"
			android:padding="4dip"
			android:layout_weight="0.05"
			android:layout_gravity="center_vertical"
			android:textOn="Manual"
			android:textOff="Manual" />
		<EditText
			android:id="@+id/durationValue"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:textStyle="normal"
			android:typeface="normal"
			android:textSize="14dip"
			android:layout_weight="0.55"
			android:layout_gravity="center_vertical"
			android:inputType="number"
		>
		</EditText>
		<Spinner
			android:id="@+id/durationUnits"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:textStyle="normal"
			android:typeface="normal"
			android:layout_weight="0.4"
			android:layout_gravity="center_vertical"
			android:textSize="11dip" />

	</LinearLayout>
	<CheckBox
		android:id="@+id/metadata"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/duration"
		android:layout_below="@+id/duration"
		android:textSize="12dip"
		android:checked="true"
		android:text="Include metadata in report" />

	<CheckBox
		android:id="@+id/email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/durationlabel"
		android:layout_below="@+id/metadata"
		android:layout_marginTop="12dip"
		android:textStyle="bold"
		android:text="Email" />
	<CheckBox
		android:id="@+id/box"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/email"
		android:layout_below="@+id/email"
		android:text="Box"
		android:textStyle="bold" />
	<CheckBox
		android:id="@+id/drive"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignTop="@+id/email"
		android:layout_marginLeft="12dip"
		android:text="Google Drive"
		android:textStyle="bold" />
	<CheckBox
		android:id="@+id/dropbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/drive"
		android:layout_below="@+id/drive"
		android:layout_marginLeft="0dip"
		android:text="Dropbox"
		android:textStyle="bold" />
</RelativeLayout>
	
